# qrwemoticons

./: CMakeLists.txt  QrwEmoticons.pro
src/: Global.h  MainWindow.cpp  MainWindow.h  QrwEmoticons  QrwEmoticons.cpp  QrwEmoticons.h  QrwEmoticonsHelper.cpp  QrwEmoticonsPlugin.h  QrwEmoticonsTextObjectInterface.cpp  QrwEmoticonsTextObjectInterface_p.h  QrwEmoticons_data.cpp  QrwEmoticons_p.cpp  QrwEmoticons_p.h  TextEdit.cpp  TextEdit.h  main.cpp
